err/django-jython.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_jython-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/doj'...
Listing './lib/python3.5/site-packages/doj/backends'...
Listing './lib/python3.5/site-packages/doj/backends/zxjdbc'...
Listing './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k'...
Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/base.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/base.py", line 18
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/call_sp.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/call_sp.py", line 8
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/creation.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/creation.py", line 152
    if len(sql_block) <> 0:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/operations.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (operations.py, line 58)
Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/pool.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/pool.py", line 58
    print "NumActive: " + str(connectionPool.getNumActive())
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/query.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/query.py", line 88
    print "SQL              [%s] " % sql
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/sql2kext.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mssql2k/sql2kext.py", line 27
    print "SQL Server 2000: Installing pagination stored procedure"
                                                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/doj/backends/zxjdbc/mysql'...
Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/mysql/base.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/mysql/base.py", line 6
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doj/backends/zxjdbc/mysql/constants'...
Listing './lib/python3.5/site-packages/doj/backends/zxjdbc/oracle'...
Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/oracle/base.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/oracle/base.py", line 7
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/oracle/zxJDBCCursorWrapperOracle.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/oracle/zxJDBCCursorWrapperOracle.py", line 11
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doj/backends/zxjdbc/postgresql'...
Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/postgresql/base.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/postgresql/base.py", line 6
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doj/backends/zxjdbc/sqlite3'...
Compiling './lib/python3.5/site-packages/doj/backends/zxjdbc/sqlite3/base.py'...
***   File "./lib/python3.5/site-packages/doj/backends/zxjdbc/sqlite3/base.py", line 14
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/doj/management'...
Listing './lib/python3.5/site-packages/doj/management/commands'...
Compiling './lib/python3.5/site-packages/doj/management/commands/tomcat.py'...
***   File "./lib/python3.5/site-packages/doj/management/commands/tomcat.py", line 18
    print "You need to pass one subcommand as argument"
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/doj/management/commands/war.py'...
***   File "./lib/python3.5/site-packages/doj/management/commands/war.py", line 68
    print "Both ADMIN_MEDIA_PREFIX and MEDIA_URL point to %s" % settings.MEDIA_URL
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/doj/management/commands/war_skel'...
Listing './lib/python3.5/site-packages/doj/management/commands/war_skel/WEB-INF'...
Listing './lib/python3.5/site-packages/doj/management/commands/war_skel/WEB-INF/lib'...
Listing './lib/python3.5/site-packages/doj/management/commands/war_skel/WEB-INF/lib-python'...
Listing './lib/python3.5/site-packages/doj/test'...
Listing './lib/python3.5/site-packages/doj/test/xmlrunner'...
Compiling './lib/python3.5/site-packages/doj/test/xmlrunner/junitxmlrunner.py'...
***   File "./lib/python3.5/site-packages/doj/test/xmlrunner/junitxmlrunner.py", line 98
    print "JUnitXMLRunner: Writing test results to %s " % \
                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
